--- a/Details.html
+++ b/Details.html
@@ -4,13 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Details</title>
-    
+    <link rel="stylesheet" href="custom.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Caveat&display=swap" rel="stylesheet">
 </head>
 <body>
     <form>
-        Name: <p id="name"></p><br>
-        Email: <p id="email"></p><br>
-        Address: <p id="address"></p><br>
+        Name: <p id="name"></p>
+        Email: <p id="email"></p>
+        Address: <p id="address"></p>
         <script>            
             document.getElementById("name").innerHTML=localStorage.getItem("name");
             document.getElementById("email").innerHTML=localStorage.getItem("email");
