--- a/Registration.html
+++ b/Registration.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registration Document</title>
+    <link rel="stylesheet" href="custom.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Caveat&display=swap" rel="stylesheet">
     <script>
         function passvalues(){
             var name = document.getElementById("name").value;
@@ -14,17 +18,18 @@
             localStorage.setItem("address", address);
         }
     </script>
+    
 </head>
 <body>
     <h1>Registration Form</h1>
     <form action="Details.html">
         <fieldset>
             <legend>Registration</legend>
-            <label>name</label>
+            <label>Name</label>
             <input type="text" id="name"/><br><br>
-            <label>email</label>
+            <label>Email</label>
             <input type="email" id="email"/><br><br>
-            <label>address</label>
+            <label>Address</label>
             <input type="address" id="address"/><br><br>
             <input type="submit" value="submit" onclick="passvalues()"/>
         </fieldset>
